[package]
name = "caving"
version = "0.1.0"
authors = ["Jeron Lau <jeron.lau@plopgrizzly.com>"]
edition = "2018"
build = "build.rs"

[build-dependencies]
cc = "1.0"

[dependencies]
libc = "0.2"
barg = "0.0.3"
miniz_oxide = "0.2.0"
siyo = { path = "../../siyo" }
afi = { path = "../../afi" }

[dependencies.adi]
version = "0.13.0-pre2"
default-features = false
features = ["screen", "speaker"]
path = "../../siyo/adi"
